docs: preference and tag docs
